<resources>
    <string name="app_name">Fuel Tracker</string>

    //NavigationBar labels
    <string name="dashboard_menu">Dashboard</string>
    <string name="history_menu">History</string>
    <string name="placeholder_menu"> </string>


    //Snackbar messages
    <string name="fields_missing">Please fill in all fields.</string>
    <string name="trip_added_successfully">Trip added successfully.</string>
    <string name="something_went_wrong">Something went wrong! Please try again.</string>
    <string name="maintenance_record_deleted">Maintenance record deleted</string>
    <string name="vehicle_added_successfully">Vehicle added successfully</string>
    <string name="maintenance_added_successfully">Maintenance added successfully</string>
    <string name="trip_record_deleted">Trip record was successfully deleted.</string>
    <string name="undo">Undo</string>
    <string name="fileds_missing">All fields are required.</string>

    //Dialog messages
    <string name="delete_alert_dialog_message">Delete selected record?</string>


    //View Labels
    <string name="petrol_station_label">Petrol station</string>
    <string name="date_label">Date</string>
    <string name="price_label">Price</string>
    <string name="litres_label">Litres</string>
    <string name="pence_per_litre_label">Pence per litre</string>
    <string name="trip_mileage_label">Trip mileage</string>
    <string name="total_mileage_label">Total mileage</string>
    <string name="fab_service_label">Service</string>
    <string name="add_trip_label">ADD TRIP</string>
    <string name="add_label">ADD</string>
    <string name="last_trip_label">Last trip:</string>
    <string name="dash_label">Dashboard</string>
    <string name="trips_history_label">Trips history</string>
    <string name="mpg">MPG</string>

    //Names of vehicles
    <string name="nissan_micra">Nissan Micra</string>
    <string name="midget">Midget</string>
    <string name="mercedes_sprinter">Mercedes Sprinter</string>
    <string name="unknown_car">Unknown car</string>
    <string name="sort_by">Sort by:</string>
    <string name="no_data">No data</string>



    //Dash labels
    <string name="six_months_bar_chart">6m</string>
    <string name="one_year_bar_chart">1y</string>
    <string name="three_years_bar_chart">3y</string>
    <string name="all_bar_chart">All</string>

    <string name="vehicles_tab_label">vehicles</string>
    <string name="maintenance_tab_label">maintenance</string>
    <string name="trips_tab_label">trips</string>
    <string name="vehicle_tab_label">Vehicle</string>
    <string name="trip_tab_label">trip</string>

    <string name="distance_label">distance</string>
    <string name="fuel_cost_label">cost</string>
    <string name="fuel_volume_label">volume</string>
    <string name="three_months_line_chart">3m</string>
    <string name="no_data_for_this_period">No data available for this period.</string>
    <string name="odo_label">ODO:</string>
    <string name="avg_mpg_label">AVG MPG:</string>
    <string name="avg_mpl_label">AVG MPL:</string>
    <string name="avg_ppm_label">AVG PPM:</string>
    <string name="avg_ppl_label">AVG PPL:</string>
    <string name="settings">Settings</string>


    //Preference
    <string name="ui_mode">Theme Mode</string>
    <string name="dark_mode">Light/Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>


    //Filter menu
    <string name="filter_menu_label">Filter</string>
    <string name="date_new_to_old">Date: New to Old</string>
    <string name="date_old_to_new">Date: Old to New</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="mileage_low_to_high">Mileage: Low to High</string>
    <string name="mileage_high_to_low">Mileage: High to Low</string>


    <string name="version">FuelTracker v1.0</string>
    <string name="new_vehicle_label">New vehicle name</string>
    <string name="workshop_name_label">Workshop name</string>
    <string name="work_done_description_label">Work done description</string>
    <string name="current_mileage_label">Current mileage</string>


</resources>