<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/filter_menu_label"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always">
        <menu>
            <item android:title="@string/date_new_to_old"
                android:id="@+id/sortDateNewToOld"/>
            <item android:title="@string/date_old_to_new"
                android:id="@+id/sortDateOldToNew"/>
            <item android:title="@string/price_low_to_high"
                android:id="@+id/sortPriceLowToHigh"/>
            <item android:title="@string/price_high_to_low"
                android:id="@+id/sortPriceHighToLow"/>
            <item android:title="@string/mileage_low_to_high"
                android:id="@+id/sortMileageLowToHigh"/>
            <item android:title="@string/mileage_high_to_low"
                android:id="@+id/sortMileageHighToLow"/>
        </menu>
    </item>
</menu>