<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="trip"
            type="dev.psuchanek.jonsfueltracker_v_1_1.models.FuelTrackerTrip" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/lastTripLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_trip_label"
            style="@style/Labels"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/dateLabel"
            style="@style/Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/date_label"
            app:layout_constraintEnd_toStartOf="@+id/distanceLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastTripLabel" />

        <TextView
            android:id="@+id/mpgLabel"
            style="@style/Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fuelCostLabel"
            app:layout_constraintTop_toTopOf="@+id/dateLabel" />

        <TextView
            android:id="@+id/distanceLabel"
            style="@style/Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            app:layout_constraintEnd_toStartOf="@+id/fuelCostLabel"
            app:layout_constraintStart_toEndOf="@+id/dateLabel"
            app:layout_constraintTop_toTopOf="@+id/dateLabel" />

        <TextView
            android:id="@+id/fuelCostLabel"
            style="@style/Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_cost_label"
            app:layout_constraintEnd_toStartOf="@+id/mpgLabel"
            app:layout_constraintStart_toEndOf="@+id/distanceLabel"
            app:layout_constraintTop_toTopOf="@+id/dateLabel" />


        <TextView
            android:id="@+id/tvDashDate"
            style="@style/InfoDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{trip.date}"
            app:layout_constraintEnd_toEndOf="@+id/dateLabel"
            app:layout_constraintStart_toStartOf="@+id/dateLabel"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel" />

        <TextView
            android:id="@+id/tvDashDistance"
            style="@style/InfoDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{trip.dashMiles}"
            app:layout_constraintEnd_toEndOf="@+id/distanceLabel"
            app:layout_constraintStart_toStartOf="@+id/distanceLabel"
            app:layout_constraintTop_toTopOf="@+id/tvDashDate" />

        <TextView
            android:id="@+id/tvDashFuelCost"
            style="@style/InfoDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{trip.dashCost}"
            app:layout_constraintEnd_toEndOf="@+id/fuelCostLabel"
            app:layout_constraintStart_toStartOf="@+id/fuelCostLabel"
            app:layout_constraintTop_toTopOf="@+id/tvDashDate" />

        <TextView
            android:id="@+id/tvDashMPG"
            style="@style/InfoDataStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{trip.dashMPG}"
            app:layout_constraintEnd_toEndOf="@+id/mpgLabel"
            app:layout_constraintStart_toStartOf="@+id/mpgLabel"
            app:layout_constraintTop_toTopOf="@+id/tvDashDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>