<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vehicle"
            type="dev.psuchanek.jonsfueltracker_v_1_1.models.Vehicle" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/cardview_padding">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidlineLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvVehicleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@{vehicle.vehicleName}"/>

            <TextView
                android:id="@+id/tvODDLabel"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odo_label"
                app:layout_constraintBottom_toBottomOf="@id/tvVehicleName"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvVehicleMileage"
                style="@style/InfoDataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vehicle.vehicleMileage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvODDLabel" />

            <TextView
                android:id="@+id/tvAvgMpgLabel"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_in_vehicle_item"
                android:text="@string/avg_mpg_label"
                app:layout_constraintStart_toStartOf="@+id/tvVehicleName"
                app:layout_constraintTop_toBottomOf="@+id/tvVehicleName" />

            <TextView
                android:id="@+id/tvAvgMplLabel"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_in_vehicle_item"
                android:text="@string/avg_mpl_label"
                app:layout_constraintStart_toStartOf="@+id/tvVehicleName"
                app:layout_constraintTop_toBottomOf="@+id/tvAvgMpgLabel" />


            <TextView
                android:id="@+id/tvAvgPpmLabel"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_ppm_label"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintTop_toTopOf="@+id/tvAvgMpgLabel" />

            <TextView
                android:id="@+id/tvAvgPplLabel"
                style="@style/Labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin_in_vehicle_item"
                android:text="@string/avg_ppl_label"
                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                app:layout_constraintTop_toBottomOf="@+id/tvAvgPpmLabel" />

            <TextView
                android:id="@+id/tvAvgMpg"
                style="@style/InfoDataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vehicle.avgMPGString}"
                app:layout_constraintEnd_toStartOf="@id/guidlineLeft"
                app:layout_constraintTop_toTopOf="@id/tvAvgMpgLabel" />

            <TextView
                android:id="@+id/tvAvgPpm"
                style="@style/InfoDataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vehicle.avgPPMString}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvAvgPpmLabel" />

            <TextView
                android:id="@+id/tvAvgMpl"
                style="@style/InfoDataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vehicle.avgMPLString}"
                app:layout_constraintEnd_toStartOf="@id/guidlineLeft"
                app:layout_constraintTop_toTopOf="@id/tvAvgMplLabel" />


            <TextView
                android:id="@+id/tvAvgPpl"
                style="@style/InfoDataStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vehicle.avgPPLString}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvAvgPplLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>